# cropper

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: a.out  files.c  files.h  globals.h  main.c  render.c  render.h  selection.c  selection.h
